[tool.poetry]
name = "repl_python3_OwO"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
discord = "^1.7.3"
Flask = "^2.0.1"
popcat_wrapper = "^1.6"
requests = "^2.26.0"
jishaku = "^2.3.1"
discord-buttons-plugin = "^0.1.2"
aioify = "^0.4.0"
colorful = "^0.5.4"
wang-test = "^1.0.0"
replit = "^3.2.4"
prettyprinter = "^0.18.0"
buttons = "^0.1.9"
pluralkit = "^0.1.3"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
